make plot into dashboard

--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
+  <a href="work_experience.html">Work Experience</a>
+</li>
+<li>
   <a href="about.html">About</a>
 </li>
 <li>
@@ -408,60 +414,6 @@ div.tocify {
 </div>
 <div id="deans-list-art-and-science-college-2020-spring-semester" class="section level4">
 <h4>Dean’s List, Art and Science College, 2020 spring semester</h4>
-</div>
-</div>
-</div>
-<div id="work-experience" class="section level2">
-<h2>Work Experience</h2>
-<div id="bucknell-teaching-and-learning-center" class="section level3">
-<h3>Bucknell Teaching and Learning Center</h3>
-<div id="level-2-tutor-and-study-group-facilitator" class="section level4">
-<h4>Level 2 Tutor and Study Group Facilitator</h4>
-</div>
-<div id="section-2" class="section level4">
-<h4>01/2020-05/2022</h4>
-<div id="developed-exercises-to-enhance-content-knowledge-mastery-and-application." class="section level5">
-<h5>- Developed exercises to enhance content knowledge mastery and application.</h5>
-</div>
-<div id="created-resources-in-the-statistics-and-computer-science-fields-such-as-problem-based-worksheets-and-study-plans." class="section level5">
-<h5>- Created resources in the Statistics and Computer Science fields, such as problem-based worksheets and study plans.</h5>
-</div>
-<div id="mentored-two-new-staff-to-develop-their-leadership-and-organizational-skills-further." class="section level5">
-<h5>- Mentored two new staff to develop their leadership and organizational skills further.</h5>
-</div>
-</div>
-</div>
-<div id="the-effect-of-oxytocin-and-social-isolation" class="section level3">
-<h3>The Effect of Oxytocin and Social Isolation</h3>
-<div id="research-assistant-in-bucknell-biology-dept." class="section level4">
-<h4>Research Assistant in Bucknell Biology Dept.</h4>
-</div>
-<div id="present-1" class="section level4">
-<h4>02/2021-present</h4>
-<div id="explored-the-differentially-expressed-gene-in-voles-brain-tissues-by-debrowser-and-identified-their-function-by-gprofiler." class="section level5">
-<h5>- Explored the differentially expressed gene in voles’ brain tissues by DEBrowser and identified their function by gProfiler.</h5>
-</div>
-<div id="trimmed-off-low-quality-genetic-data-by-using-fastqc-and-used-kallisto-and-star-for-gene-alignment" class="section level5">
-<h5>- Trimmed off low quality genetic data by using fastqc and used Kallisto and Star for gene alignment</h5>
-</div>
-<div id="built-regression-models-negative-binomial-distribution-to-explore-the-effect-of-treatments-on-specific-genes." class="section level5">
-<h5>- Built regression models (negative binomial distribution) to explore the effect of treatments on specific genes.</h5>
-</div>
-</div>
-</div>
-<div id="how-substance-use-disorder-is-handled-in-recovery-friendly-businesses" class="section level3">
-<h3>How substance use disorder is handled in recovery friendly businesses</h3>
-<div id="partnered-with-united-way" class="section level4">
-<h4>Partnered with United Way</h4>
-</div>
-<div id="section-3" class="section level4">
-<h4>01/2022-05/2022</h4>
-<div id="design-the-randomized-sampling-process-stratified.-calculate-the-sample-size-and-the-appropriate-allocation-in-each-stratum-according-to-previous-studies." class="section level5">
-<h5>- Design the randomized sampling process (stratified). Calculate the sample size and the appropriate allocation in each stratum according to previous studies.</h5>
-</div>
-<div id="created-the-survey-questionnaire-and-wrote-irb-proposal." class="section level5">
-<h5>- Created the survey questionnaire and wrote IRB proposal.</h5>
-</div>
 </div>
 </div>
 </div>
