--- a/work_experience.html
+++ b/work_experience.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>Work Experience</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -357,24 +357,96 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">Work Experience</h1>
 
 </div>
 
 
-<div id="this-is-about-page" class="section level1">
-<h1>This is About Page</h1>
-<div id="this-project-is-created-for-p8105-ddata-science-classon-oct.24-2022." class="section level2">
-<h2>This project is created for P8105 Ddata Science classon Oct.24 2022.</h2>
+<div id="bucknell-teaching-and-learning-center" class="section level3">
+<h3>Bucknell Teaching and Learning Center</h3>
+<div id="level-2-tutor-and-study-group-facilitator" class="section level4">
+<h4>Level 2 Tutor and Study Group Facilitator</h4>
 </div>
-<div id="this-project-introduces-details-about-jiawen-zhaos-education-and-work-experience." class="section level2">
-<h2>This project introduces details about Jiawen Zhao’s education and work experience.</h2>
+<div id="section" class="section level4">
+<h4>01/2020-05/2022</h4>
+<div id="developed-exercises-to-enhance-content-knowledge-mastery-and-application." class="section level5">
+<h5>- Developed exercises to enhance content knowledge mastery and application.</h5>
 </div>
-<div id="please-contact-jz3570cumc.columbia.edu-for-more-detail-info-about-jiawen-zhao." class="section level2">
-<h2>Please contact <a href="mailto:jz3570@cumc.columbia.edu" class="email">jz3570@cumc.columbia.edu</a> for more detail info about Jiawen Zhao.</h2>
+<div id="created-resources-in-the-statistics-and-computer-science-fields-such-as-problem-based-worksheets-and-study-plans." class="section level5">
+<h5>- Created resources in the Statistics and Computer Science fields, such as problem-based worksheets and study plans.</h5>
 </div>
-<div id="thank-you" class="section level2">
-<h2>Thank you!</h2>
+<div id="mentored-two-new-staff-to-develop-their-leadership-and-organizational-skills-further." class="section level5">
+<h5>- Mentored two new staff to develop their leadership and organizational skills further.</h5>
+</div>
+</div>
+</div>
+<div id="research-work-experience" class="section level2">
+<h2>Research-Work Experience</h2>
+<div id="the-effect-of-oxytocin-and-social-isolation" class="section level3">
+<h3>The Effect of Oxytocin and Social Isolation</h3>
+<div id="research-assistant-in-bucknell-biology-dept." class="section level4">
+<h4>Research Assistant in Bucknell Biology Dept.</h4>
+</div>
+<div id="present" class="section level4">
+<h4>02/2021-present</h4>
+<div id="explored-the-differentially-expressed-gene-in-voles-brain-tissues-by-debrowser-and-identified-their-function-by-gprofiler." class="section level5">
+<h5>- Explored the differentially expressed gene in voles’ brain tissues by DEBrowser and identified their function by gProfiler.</h5>
+</div>
+<div id="trimmed-off-low-quality-genetic-data-by-using-fastqc-and-used-kallisto-and-star-for-gene-alignment" class="section level5">
+<h5>- Trimmed off low quality genetic data by using fastqc and used Kallisto and Star for gene alignment</h5>
+</div>
+<div id="built-regression-models-negative-binomial-distribution-to-explore-the-effect-of-treatments-on-specific-genes." class="section level5">
+<h5>- Built regression models (negative binomial distribution) to explore the effect of treatments on specific genes.</h5>
+</div>
+</div>
+</div>
+<div id="how-substance-use-disorder-is-handled-in-recovery-friendly-businesses" class="section level3">
+<h3>How substance use disorder is handled in recovery friendly businesses</h3>
+<div id="partnered-with-united-way" class="section level4">
+<h4>Partnered with United Way</h4>
+</div>
+<div id="section-1" class="section level4">
+<h4>01/2022-05/2022</h4>
+<div id="design-the-randomized-sampling-process-stratified.-calculate-the-sample-size-and-the-appropriate-allocation-in-each-stratum-according-to-previous-studies." class="section level5">
+<h5>- Design the randomized sampling process (stratified). Calculate the sample size and the appropriate allocation in each stratum according to previous studies.</h5>
+</div>
+<div id="created-the-survey-questionnaire-and-wrote-irb-proposal." class="section level5">
+<h5>- Created the survey questionnaire and wrote IRB proposal.</h5>
+</div>
+</div>
+</div>
+</div>
+<div id="education-experience" class="section level2">
+<h2>Education Experience</h2>
+<div id="columbia-university-mailman-school-of-public-health" class="section level3">
+<h3>Columbia University, Mailman School of Public Health</h3>
+<div id="new-york-ny-usa" class="section level4">
+<h4>New York, NY, USA</h4>
+</div>
+<div id="present-1" class="section level4">
+<h4>09/2022-Present</h4>
+</div>
+<div id="master-of-science-in-biostatistics" class="section level4">
+<h4>Master of Science in Biostatistics</h4>
+</div>
+<div id="section-2" class="section level4">
+<h4></h4>
+</div>
+</div>
+<div id="bucknell-university" class="section level3">
+<h3>Bucknell University</h3>
+<div id="lewisburg-pa-usa" class="section level4">
+<h4>Lewisburg, PA, USA</h4>
+</div>
+<div id="section-3" class="section level4">
+<h4>09/2018-05/2022</h4>
+</div>
+<div id="bachelor-of-science-in-applied-mathematics-gpa-3.554.0" class="section level4">
+<h4>Bachelor of Science in Applied Mathematics GPA: 3.55/4.0</h4>
+</div>
+<div id="deans-list-art-and-science-college-2020-spring-semester" class="section level4">
+<h4>Dean’s List, Art and Science College, 2020 spring semester</h4>
+</div>
 </div>
 </div>
 
