--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>My website</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -331,6 +331,9 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="work_experience.html">Work Experience</a>
 </li>
 <li>
@@ -357,15 +360,15 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">My website</h1>
 
 </div>
 
 
 <div id="this-is-about-page" class="section level1">
 <h1>This is About Page</h1>
-<div id="this-project-is-created-for-p8105-ddata-science-classon-oct.24-2022." class="section level2">
-<h2>This project is created for P8105 Ddata Science classon Oct.24 2022.</h2>
+<div id="this-project-is-created-for-p8105-ddata-science-class-on-oct.24-2022." class="section level2">
+<h2>This project is created for P8105 Ddata Science class on Oct.24 2022.</h2>
 </div>
 <div id="this-project-introduces-details-about-jiawen-zhaos-education-and-work-experience." class="section level2">
 <h2>This project introduces details about Jiawen Zhao’s education and work experience.</h2>
