--- a/work_experience.html
+++ b/work_experience.html
@@ -331,6 +331,9 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="work_experience.html">Work Experience</a>
 </li>
 <li>
